finialized cloud foundry deployment and extracted initializer task